[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nested-grey-box"
description = "An example package which does something"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Zoe Le Hong", email = "zoelh@mit.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "pvlib >= 0.9.4",
    "scipy",
]

[project.urls]
Documentation = "https://somesite.com"
Repository = "https://github.com/zlehong/nested-grey-box"